by Ken Cameron patch 1830432

--- a/jmri/jmrix/nce/clockmon/ClockMonBundle.properties
+++ b/jmri/jmrix/nce/clockmon/ClockMonBundle.properties
@@ -1,11 +1,9 @@
 # ClockMonBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the Nce Clock Monitor Pane
 #
-
-
 
 CheckBox24HourFormat    = 24 Hour Format
 
@@ -29,11 +27,14 @@ LabelTime = Time:
 LabelTimeSep = :
 LabelRatio = Ratio:
 LabelToOne = :1
+InterfaceSyncSelectBorderText = Sync Mode Select
 
 TagAm = AM
 TagPm = PM
 TagRunning = RUNNING
 TagStopped = STOPPED
+TagIsNceMaster = NCE Master
+TagIsInternalMaster = Internal Master
 
 InterfaceUpdRate = Clock Interface Polling Interval
 InterfaceUpdRateBorderText = Set Polling Speed
@@ -49,3 +50,12 @@ LogNceClockRatioCmdError = NCE clock ratio cmd replied:
 LogNceClockStopCmdError = NCE clock stop cmd replied:
 LogNceClockStartCmdError = NCE clock start cmd replied:
 LogAlarmTimeIntervalError = reseting pollingInterval, invalid value: 
+
+InterfacePidBorderText = Advanced - PID constants
+InterfacePidNce = NCE
+InterfacePidInt = Internal
+InterfacePidGainP = P factor
+InterfacePidGainI = I factor
+InterfacePidGainD = D factor
+SetPid = Change PID Constants
+ClockError = Clock Error:
