--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -56,5 +56,5 @@ jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
 jmri.jmrix.rps.rpsmon.RpsMonAction      = Open RPS Monitor
 jmri.jmrix.rps.display.DisplayAction    = Open RPS Calculations Display
 jmri.jmrix.rps.DataSourceAction         = Open RPS Connection
-jmri.jmrix.rps.RpsTrackingFrameAction   = Open RPS Tracking Display
-jmri.jmrix.rps.AlignmentPanelAction     = Open RPS Alignment Tool
+jmri.jmrix.rps.trackingpanel.RpsTrackingFrameAction   = Open RPS Tracking Display
+jmri.jmrix.rps.reversealign.AlignmentPanelAction     = Open RPS Alignment Tool
