add Layout Editor tool to place signals and setup signal logic for throat-to-throat turnouts, e.g., double slips

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -81,7 +81,7 @@ RotationToolTip = Enter clockwise rotation for turnout (degrees).
 Name = Name
 TurnoutNameToolTip = Enter name of physical turnout.
 StateToolTip = Select turnout state corresponding to continuing route.
-Continuing = Continuing Route Turnout State
+ContinuingState = Continuing Route Turnout State
 BlockID = Block: Name
 BlockIDToolTip = Enter name of block for new turnout, level crossing, or track segment.
 OccupancySensor = Occupancy Sensor
@@ -239,6 +239,7 @@ SignalsAtTurnout = Set Signals at Turnout
 SignalsAtBoundary = Set Signals at Block Boundary
 SignalsAtXoverTurnout = Set Signals at Double Crossover
 SignalsAtLevelXing = Set Signals at Level Crossing
+SignalsAtTToTTurnout = Set Signals at Throat-to-Throat Turnouts
 BlockAtA = Block 1
 BlockAtC = Block 2
 SignalsTurnoutNameHint = Enter name (system or user) of turnout where signals are needed.
@@ -249,7 +250,13 @@ GetSavedHint = Click to retrieve signal heads previously stored.
 ThroatContinuing = Throat - Continuing
 ThroatDiverging = Throat - Diverging
 Continuing = Continuing
+ContinuingTrack = continuing track
 Diverging = Diverging
+DivergingTrack = diverging track
+SignalLocated = Signal located at 
+ProtectsTurnout = Protects Turnout
+OrBoth = (or both Turnout
+Tracks) = tracks)
 AContinuing = A Corner - Continuing
 ADiverging = A Corner - Diverging
 BContinuing = B Corner - Continuing
@@ -292,7 +299,8 @@ SignalsError14 = Error - This tool requires signal heads be entered as pairs, A 
 SignalsError15 = Error - There are no level crossings on your panel.\nPlease add a level crossing or cancel.
 SignalsError16 = Error - The entered block names match "{0} level crossings.\nPlease enter block names that match only one level crossing.
 SignalsError17 = Error - No level crossing matches the block(s)\nentered. Please try again or cancel.
-InfoMessage1 = Sorry, Set Signals at Turnout does\nnot work with double crossover turnouts.
+SignalsError18 = Error - This tool requires two turnouts (RH, LH, or WYE) connected throat-to-throat by a single track segment. 
+InfoMessage1 = Sorry, this tool does\nnot work with double crossover turnouts.
 InfoMessage2 = Sorry, cannot place signal heads at turnouts\nthat are not oriented vertical or horizontal.
 InfoMessage3 = Sorry, cannot place signal heads at anchor points\nwhere track is not oriented vertical or horizontal.
 InfoMessage4 = Cannot set up logic because block "{0}"\ndoesn't have an occupancy sensor.
@@ -324,6 +332,8 @@ Error10 = Error - Cannot create a sensor icon because no name is entered in the\
 Error11 = Error - Cannot create a memory label because no name is entered in the\nMemory Label field. Please enter the name of a memory variable and try again.
 Error12 = Error - Cannot translate selection because no selection has been made.\nPlease select by dragging with the mouse and try again.
 Error13 = Error - Cannot delete a ray track because none are within 30 degrees of the\nentered angle. Please try again with a more precise angle entry.
+Error14 = Error - Required throat-to-throat arrangement not found. Please set up as two turnouts connected throat-to-throat by a single track segment.
+Error15 = Error - Cannot proceed because there is no turnout is assigned to one or more of the turnout diagrams. Please assign turnout(s) and try again.
 
 # question messages
 ButtonNo = No
