Adding LCD type clock display. Easier to read than Nixie but clearly not as cool.

--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.16 $
+# Revision $Revision: 1.17 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
@@ -37,6 +37,7 @@ MenuItemSendDCCPacket = Send DCC packet ...
 
 MenuClocks = Clocks
 MenuItemNixieClock = Nixie Clock
+MenuItemLcdClock = Lcd Clock
 MenuItemSetupClock = Setup Fast Clock ...
 MenuItemAnalogClock = Analog Clock
 
