add analog clock

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.9 $
+# Revision $Revision: 1.10 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -35,13 +35,14 @@ jmri.jmrit.consisttool.ConsistToolAction =          Open Consisting Tool
 jmri.jmrit.sendpacket.SendPacketAction =            Open DCC Packet Tool
 
 jmri.jmrit.nixieclock.NixieClockAction = 			Open Nixie Clock
+jmri.jmrit.nixieclock.AnalogClockAction = 			Open Analog Clock
 jmri.jmrit.simpleclock.SimpleClockAction = 			Open Fast Clock Configuration
 
 # Panels menu
 jmri.jmrit.display.PanelEditorAction =              New Panel
 jmri.configurexml.LoadXmlConfigAction =             Load Panel
 jmri.jmrit.automat.monitor.AutomatTableAction =     Open Thread Monitor
-jmri.jmrit.jython.JythonWindow =               Open Script Output Window
+jmri.jmrit.jython.JythonWindow =                    Open Script Output Window
 jmri.jmrit.jython.InputWindowAction =               Open Script Entry Window
 
 # selected items from systems menus
@@ -53,8 +54,9 @@ jmri.jmrix.loconet.slotmon.SlotMonAction =          Open LocoNet Slot Monitor
 jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
 
-jmri.jmrix.rps.rpsmon.RpsMonAction      = Open RPS Monitor
-jmri.jmrix.rps.display.DisplayAction    = Open RPS Calculations Display
-jmri.jmrix.rps.DataSourceAction         = Open RPS Connection
-jmri.jmrix.rps.trackingpanel.RpsTrackingFrameAction   = Open RPS Tracking Display
-jmri.jmrix.rps.reversealign.AlignmentPanelAction     = Open RPS Alignment Tool
+# RPS items
+jmri.jmrix.rps.rpsmon.RpsMonAction      =           Open RPS Monitor
+jmri.jmrix.rps.display.DisplayAction    =           Open RPS Calculations Display
+jmri.jmrix.rps.DataSourceAction         =           Open RPS Connection
+jmri.jmrix.rps.trackingpanel.RpsTrackingFrameAction= Open RPS Tracking Display
+jmri.jmrix.rps.reversealign.AlignmentPanelAction =  Open RPS Alignment Tool
