--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.10 $
+# Revision $Revision: 1.11 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -35,7 +35,8 @@ jmri.jmrit.consisttool.ConsistToolAction =          Open Consisting Tool
 jmri.jmrit.sendpacket.SendPacketAction =            Open DCC Packet Tool
 
 jmri.jmrit.nixieclock.NixieClockAction = 			Open Nixie Clock
-jmri.jmrit.nixieclock.AnalogClockAction = 			Open Analog Clock
+jmri.jmrit.lcdclock.LcdClockAction = 			    Open LCD Clock
+jmri.jmrit.analogclock.AnalogClockAction = 			Open Analog Clock
 jmri.jmrit.simpleclock.SimpleClockAction = 			Open Fast Clock Configuration
 
 # Panels menu
