--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.14 $
+# Revision $Revision: 1.15 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -28,6 +28,7 @@ MenuItemMRC = Model Rectifier Corp (MRC)
 MenuItemCommandMonitor = Command Monitor
 MenuItemSendCommand = Send Command
 MenuItemFirmwareUpdate = Firmware Update
+MenuItemSlotMonitor = Slot Monitor
 MenuItemMacroCommand = Send Macro
 MenuItemMacroEdit = Edit Macro
 MenuItemConsistEdit = Edit Consist
