New name for packet monitor

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.15 $
+# Revision $Revision: 1.16 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -32,6 +32,6 @@ MenuItemSlotMonitor = Slot Monitor
 MenuItemMacroCommand = Send Macro
 MenuItemMacroEdit = Edit Macro
 MenuItemConsistEdit = Edit Consist
-MenuItemTrackPacketMonitor = Track Packet Monitor
+MenuItemTrackPacketMonitor = DCC Packet Analyzer
 MenuItemClockMon = Monitor Clock
 
