--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -63,6 +63,7 @@ StateExceptionDuringRead = Exception during CV read: {0}
 StateReadingIndexedCV = Reading Indexed CV{0}.{1} ...
 StateExceptionDuringIndexedRead = Exception during IndexedCV read: {0}
 StateConfirmingCV = Confirming CV{0}...
+StateConfirmIndexedCV = Confirming Indexed CV{0}.{1} ...
 StateExceptionDuringConfirm = Exception during CV confirm: {0}
 StateWritingCV = Writing CV{0}...
 StateExceptionDuringWrite = Exception during CV write: {0}
