Add compare change and all buttons to CV tables

--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -28,11 +28,15 @@ ButtonReadChangesSheet = Read changes on sheet
 ButtonReadFullSheet = Read full sheet
 ButtonWriteChangesSheet = Write changes on sheet
 ButtonWriteFullSheet = Write full sheet
+ButtonConfirmChangesSheet = Compare changes on sheet
+ButtonConfirmFullSheet = Compare full sheet
 
 ButtonStopReadChangesSheet = Stop Read changes on sheet
 ButtonStopReadSheet = Stop Read full sheet
 ButtonStopWriteChangesSheet = Stop Write changes on sheet
 ButtonStopWriteSheet = Stop Write full sheet
+ButtonStopConfirmChangesSheet = Stop Compare changes on sheet
+ButtonStopConfirmSheet = Stop Compare full sheet
 
 TipClickToOpen = Click to open the programmer
 TipSelectLoco = Select a locomotive or decoder to enable
@@ -47,6 +51,8 @@ TipReadChangesSheet = Read highlighted values on this sheet from decoder. Warnin
 TipReadAllSheet = Read all values on this sheet from decoder. Warning: may take a long time!
 TipWriteHighlightedSheet = Write highlighted values on this sheet to decoder
 TipWriteAllSheet = Write all values on this sheet to decoder
+TipConfirmChangesSheet = Compare highlighted values on this sheet with decoder. Warning: may take a long time!
+TipConfirmAllSheet = Compare all values on this sheet with decoder. Warning: may take a long time!
 
 TipNoRead = Button disabled because configured command station can't read CVs
 TipTabDisabledNoCategory = Tab disabled because there are no options in this category
