--- a/jmri/jmrit/simpleclock/SimpleClockBundle.properties
+++ b/jmri/jmrit/simpleclock/SimpleClockBundle.properties
@@ -1,6 +1,6 @@
 # SimpleClockBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.SimpleClockTable window
 
@@ -8,8 +8,16 @@ SimpleClockWindowTitle  = Fast Clock Setup
 
 TimeSource         = Time Source:
 ComputerClock      = Internal Computer Clock
+Synchronize		   = Synchronize Internal Fast Clock with 
+Correct			   = Correct hardware clock
 SpeedUpFactor      = Fast Clock Rate:
 NewTime            = Fast Clock Time:
+
+BoxLabelStartUp	   = Start Up Options
+StartStopped       = Start with Fast Clock Stopped
+StartSetTime       = Set Fast Clock Time to
+StartClock		   = Start Selected Clock
+None			   = None
 
 BoxLabelClockState = Clock State
 ClockRunning       = Fast Clock is running.
@@ -17,11 +25,19 @@ ClockStopped       = Fast Clock is stopped.
 CurrentTime        = Current Fast Time:
 
 TipTimeSource      = Select time source for the fast clock.
+TipSynchronize     = Check to synchronize the internal and hardware clocks.
+TipCorrect		   = Check to correct hardware clock accuracy using the computer clock.
 TipFactorField     = Enter multiplication factor for fast time.
 TipSetRateButton   = Click to set Fast Clock Rate to entered value.
 TipHoursField      = Enter hours (0-23) for a 24-hour clock time.
 TipMinutesField    = Enter minutes (0-59) for a 24-hour clock time.
 TipSetTimeButton   = Click to set Fast Clock Time to entered value.
+TipStartStopped    = Check if clock is to be stopped when configuration is loaded.
+TipStartSetTime    = Check after entering start time at right if time should be set at start up.
+TipStartHours      = Enter start time hours (0-23) for a 24-hour clock.
+TipStartMinutes    = Enter start time minutes (0-59) for a 24-hour clock.
+TipSetStartTimeButton = Click to set start up Fast Clock Time to entered value.
+TipClockStartOption = Select the fast clock display you want started automatically at start up.
 TipStartButton     = Click to start Fast Clock.
 TipStopButton      = Click to stop Fast Clock.
 
@@ -36,4 +52,9 @@ HoursError         = Error in Fast Time hours entry:
 HoursRangeError    = Hours entry not within allowed 0 - 23 range.
 MinutesError       = Error in Fast Time minutes entry:
 MinutesRangeError  = Minutes entry not within allowed 0 - 59 range.
+NegativeRateError  = Error in entry - Rate cannot be negative.
+NonIntegerError    = Error in entry - Your hardware clock requires an integer rate.
 
+ReminderTitle = Reminder
+Reminder1 = Please remember to save your changes to disk.
+Reminder2 = ( Select 'Store panels...' in the Panels menu. )
