adding single crossover turnouts and optional grid to Layout Editor

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -37,6 +37,10 @@ WYEAbbreviation = WYE
 WYEToolTip = Select to add a wye turnout when next clicking with shift down.
 DoubleCrossOver = Double Xover
 DoubleCrossOverToolTip = Select to add a double crossover turnout when next clicking with shift down.
+RHCrossOver = RH Xover
+RHCrossOverToolTip = Select to add a right-hand single crossover turnout when next clicking with shift down.
+LHCrossOver = LH Xover
+LHCrossOverToolTip = Select to add a left-hand single crossover turnout when next clicking with shift down.
 Dashed = Dashed
 DashedCheckBoxTip = Sets track segment style - checked for dashed, unchecked for solid.
 MainlineBox = Mainline
@@ -186,7 +190,9 @@ SetSignals = Set Signals...
 Edit = Edit...
 RHTurnout = Right-Hand Turnout
 LHTurnout = Left-Hand Turnout
-XOverTurnout = Double Crossover 
+XOverTurnout = Double Crossover
+RHXOverTurnout = Right-Hand Crossover 
+LHXOverTurnout = Left-Hand Crossover 
 WYETurnout = WYE Turnout
 LevelCrossing = Level Crossing
 Anchor = Anchor Point
@@ -225,6 +231,7 @@ AllowRepositioning = Allow Repositioning
 AllowLayoutControl = Allow Layout Control
 AllowTurnoutAnimation = Allow Turnout Animation
 ShowEditHelp = Show Help Bar in Edit Mode
+ShowEditGrid = Show Grid in Edit Mode
 NewTitle = New Title
 AddBackground = Add Background Image
 AddTurntable = Add Turntable
@@ -237,7 +244,7 @@ DefaultTrackColor = Set Default Track Color
 # items specific to Layout Editor tools 
 SignalsAtTurnout = Set Signals at Turnout
 SignalsAtBoundary = Set Signals at Block Boundary
-SignalsAtXoverTurnout = Set Signals at Double Crossover
+SignalsAtXoverTurnout = Set Signals at Crossover
 SignalsAtLevelXing = Set Signals at Level Crossing
 SignalsAtTToTTurnout = Set Signals at Throat-to-Throat Turnouts
 BlockAtA = Block 1
@@ -257,6 +264,7 @@ SignalLocated = Signal located at
 ProtectsTurnout = Protects Turnout
 OrBoth = (or both Turnout
 Tracks) = tracks)
+EnterXOverTurnout = Enter name of crossover turnout:
 AContinuing = A Corner - Continuing
 ADiverging = A Corner - Diverging
 BContinuing = B Corner - Continuing
@@ -300,20 +308,20 @@ SignalsError15 = Error - There are no level crossings on your panel.\nPlease add
 SignalsError16 = Error - The entered block names match "{0} level crossings.\nPlease enter block names that match only one level crossing.
 SignalsError17 = Error - No level crossing matches the block(s)\nentered. Please try again or cancel.
 SignalsError18 = Error - This tool requires two turnouts (RH, LH, or WYE) connected throat-to-throat by a single track segment. 
-InfoMessage1 = Sorry, this tool does\nnot work with double crossover turnouts.
+InfoMessage1 = Sorry, this tool does\nnot work with crossover turnouts.
 InfoMessage2 = Sorry, cannot place signal heads at turnouts\nthat are not oriented vertical or horizontal.
 InfoMessage3 = Sorry, cannot place signal heads at anchor points\nwhere track is not oriented vertical or horizontal.
 InfoMessage4 = Cannot set up logic because block "{0}"\ndoesn't have an occupancy sensor.
 InfoMessage5 = Cannot set up logic because the next signal (at\nend of block "{0}") apparently is not defined yet.
 InfoMessage6 = Cannot set up logic because blocks have\nnot been defined around this item.
 InfoMessage7 = Cannot set up logic because all connections\nhave not been defined around this item.
-InfoMessage8 = Sorry, Set Signals at Double Crossover does\nnot work with other types of turnouts.
+InfoMessage8 = Sorry, Set Signals at Crossover does\nnot work with other types of turnouts.
 SignalsWarn1 = Warning - Logic was set up at signal head "{0}", but no sensors\nto protect for cross traffic at the level crossing were found.
 # reminder messages
 ReminderTitle = Reminder
 Reminder1 = This panel has been changed.  
 Reminder2 = Please remember to save it to disk.
-Reminder3 = (Select 'Store panels...' in the Panel menu or the File menu of any panel.)
+Reminder3 = ( Select 'Store panels...' in the Panels menu or the File menu of any panel.)
 
 # error messages
 Error = Error
