--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.17 $
+# Revision $Revision: 1.18 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
@@ -37,7 +37,7 @@ MenuItemSendDCCPacket = Send DCC packet ...
 
 MenuClocks = Clocks
 MenuItemNixieClock = Nixie Clock
-MenuItemLcdClock = Lcd Clock
+MenuItemLcdClock = LCD Clock
 MenuItemSetupClock = Setup Fast Clock ...
 MenuItemAnalogClock = Analog Clock
 
