backgrounds also added at specified position; default positionow 0,0, and setable via properties file

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.15 $
+# Revision $Revision: 1.16 $
 #
 # Default properties for the jmrit.display package
 
@@ -52,6 +52,8 @@ PromptNewName       = Enter new name:
 
 LabelX              = x:
 LabelY              = y:
+DefaultX            = 0
+DefaultY            = 0
 
 CheckBoxEditable    = Panel items popup menus active
 CheckBoxPositionable = Panel items can be repositioned
