Add 12/24 hour option to fast clock hardware clock

--- a/jmri/jmrit/simpleclock/SimpleClockBundle.properties
+++ b/jmri/jmrit/simpleclock/SimpleClockBundle.properties
@@ -1,6 +1,6 @@
 # SimpleClockBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.SimpleClockTable window
 
@@ -8,8 +8,9 @@ SimpleClockWindowTitle  = Fast Clock Setup
 
 TimeSource         = Time Source:
 ComputerClock      = Internal Computer Clock
-Synchronize		   = Synchronize Internal Fast Clock with 
+Synchronize		   = Synchronize Internal Fast Clock and 
 Correct			   = Correct hardware clock
+Display12Hour      = Use 12-hour clock display
 SpeedUpFactor      = Fast Clock Rate:
 NewTime            = Fast Clock Time:
 
@@ -27,6 +28,7 @@ CurrentTime        = Current Fast Time:
 TipTimeSource      = Select time source for the fast clock.
 TipSynchronize     = Check to synchronize the internal and hardware clocks.
 TipCorrect		   = Check to correct hardware clock accuracy using the computer clock.
+TipDisplay         = Check to request a 12-hour fast clock display on your hardware clock.
 TipFactorField     = Enter multiplication factor for fast time.
 TipSetRateButton   = Click to set Fast Clock Rate to entered value.
 TipHoursField      = Enter hours (0-23) for a 24-hour clock time.
