I didn't like "Old" how about "All"

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.17 $
+# Revision $Revision: 1.18 $
 #
 # Default properties for the jmrit.display package
 
@@ -56,7 +56,7 @@ DefaultX            = 0
 DefaultY            = 0
 
 CheckBoxEditable    = Panel items popup menus active
-CheckBoxPositionable = Old panel items can be repositioned
+CheckBoxPositionable = All panel items can be repositioned
 CheckBoxShowCoordinates = Show item's coordinates in popup menu 
 CheckBoxControlling = Panel items control layout
 CheckBoxMenuBar     = Panel has menu
