--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.14 $ -->
+<!-- Revision $Revision: 1.15 $ -->
 
 <!-- This file is part of JMRI.                                             -->
 <!--                                                                        -->
@@ -38,6 +38,9 @@
     <!-- JRE version (currently 1.3) -->
     <property name="jre_version" value="1.3" />
     
+  <!-- You can specify a DecoderPro/PanelPro config file at runtime -->
+  <!-- with e.g. "ant -Dantargline=DecoderProFile.xml decoderpro"   -->
+
   <!-- set global properties for this build -->
   <property name="source" value="src"/>
   <property name="test" value="test"/>
