Add Dan's Set x & y feature to Layout Editor icons

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -224,6 +224,14 @@ EditLogic = Edit Logic
 SignalLogicFor = Signal Logic for
 Turntable = Turntable
 
+# coordinate edit items
+EnterXTooltip = Enter new x coordinate
+EnterYTooltip = Enter new y coordinate
+Set = Set
+SetXY = Set x & y
+SetButtonToolTip = Press to change x and y coordinates
+CancelButtonToolTip = Press to cancel changes
+
 # option menu items
 Options = Options
 EditMode = Edit Mode
@@ -317,6 +325,7 @@ InfoMessage6 = Cannot set up logic because blocks have\nnot been defined around 
 InfoMessage7 = Cannot set up logic because all connections\nhave not been defined around this item.
 InfoMessage8 = Sorry, Set Signals at Crossover does\nnot work with other types of turnouts.
 SignalsWarn1 = Warning - Logic was set up at signal head "{0}", but no sensors\nto protect for cross traffic at the level crossing were found.
+
 # reminder messages
 ReminderTitle = Reminder
 Reminder1 = This panel has been changed.  
