--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.23 $
+# Revision $Revision: 1.24 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -44,11 +44,12 @@ TitleAddLight   = Add/Edit Light
 
 ColumnHeadEnabled = Enabled
 
-StringSE8c4aspect  = SE8c 4 aspect
 StringTripleTurnout = Triple Turnout
 StringDoubleTurnout = Double Turnout
 StringVirtual = Virtual
+StringSE8c4aspect  = SE8c 4 Aspect
 StringLsDec = LDT LS-DEC
+StringGrapevine = Grapevine
 
 LabelSystemName = System Name:
 LabelUserName   = User Name:
