--- a/help/en/build.xml
+++ b/help/en/build.xml
@@ -1,6 +1,6 @@
 <!-- an ANT build.xml file for JMRI XSLT -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004, 2005, 2008 -->
-<!-- Revision $Revision: 1.1 $ -->
+<!-- Revision $Revision: 1.2 $ -->
 
 <!-- This file is part of JMRI.                                             -->
 <!--                                                                        -->
@@ -43,6 +43,7 @@
     		includes="JmriHelp_enIndex.xml"
     	>
 	</style>
+    <move file="JmriHelp_enIndex.html" tofile="webindex.html"/> 
   </target>
 
   <target name="TOC" depends="init" 
@@ -54,6 +55,7 @@
     		includes="JmriHelp_enTOC.xml"
     	>
 	</style>
+    <move file="JmriHelp_enTOC.html" tofile="webtoc.html"/> 
   </target>
 
   <target name="all" depends="init, index, TOC" 
