--- a/help/en/build.xml
+++ b/help/en/build.xml
@@ -1,6 +1,6 @@
 <!-- an ANT build.xml file for JMRI XSLT -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004, 2005, 2008 -->
-<!-- Revision $Revision: 1.2 $ -->
+<!-- Revision $Revision: 1.3 $ -->
 
 <!-- This file is part of JMRI.                                             -->
 <!--                                                                        -->
@@ -43,7 +43,7 @@
     		includes="JmriHelp_enIndex.xml"
     	>
 	</style>
-    <move file="JmriHelp_enIndex.html" tofile="webindex.html"/> 
+    <move file="JmriHelp_enIndex.html" tofile="webindex.shtml"/> 
   </target>
 
   <target name="TOC" depends="init" 
@@ -55,7 +55,7 @@
     		includes="JmriHelp_enTOC.xml"
     	>
 	</style>
-    <move file="JmriHelp_enTOC.html" tofile="webtoc.html"/> 
+    <move file="JmriHelp_enTOC.html" tofile="webtoc.shtml"/> 
   </target>
 
   <target name="all" depends="init, index, TOC" 
