Add user control of turnout sizes to Layout Editor

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.9 $
+# Revision $Revision: 1.10 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -185,6 +185,7 @@ Block1ID = Block 1
 Block2ID = Block 2
 Block3ID = Block 3
 Block4ID = Block 4
+UseSizeAsDefault = Use Size As Default
 Remove = Remove
 SetSignals = Set Signals...
 Edit = Edit...
@@ -250,6 +251,7 @@ AddFastClock = Add Fast Clock
 DefaultTrackColor = Set Default Track Color
 
 # items specific to Layout Editor tools 
+ResetTurnoutSize = Use Program Default Turnout Size
 SignalsAtTurnout = Set Signals at Turnout
 SignalsAtBoundary = Set Signals at Block Boundary
 SignalsAtXoverTurnout = Set Signals at Crossover
