--- a/scripts/build.xml
+++ b/scripts/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004, 2007 -->
-<!-- Revision $Revision: 1.66 $ -->
+<!-- Revision $Revision: 1.67 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -239,6 +239,7 @@
 
   <target name="javadoc" depends="init" description="create JavaDocs">
     <javadoc packagenames="jmri.*, apps.*"
+           maxmemory="512m"
            sourcepath="src"
            overview="src/jmri/overview.html"
            defaultexcludes="yes"
