--- a/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle.properties
+++ b/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle.properties
@@ -1,6 +1,6 @@
 # NodeConfigBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.grapevine.nodeconfig window
 
@@ -17,6 +17,7 @@ TipNodeType         = Select type of node.
 TipAddButton        = Add a new node
 TipEditButton       = Edit an existing node
 TipDeleteButton     = Delete an existing node
+TipInitButton       = Send initialization messages to node
 TipDoneButton       = Select when done configuring nodes
 TipUpdateButton     = Change node information
 TipCancelButton     = Stop edit without changing node
@@ -24,6 +25,7 @@ TipCancelButton     = Stop edit without changing node
 ButtonAdd           = Add Node
 ButtonEdit          = Edit Node
 ButtonDelete        = Delete Node
+ButtonInit          = Init Node
 ButtonDone          = Done
 ButtonUpdate        = Update Node
 ButtonCancel        = Cancel 
