--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.11 $
+# Revision $Revision: 1.12 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -54,6 +54,8 @@ jmri.jmrix.loconet.locomon.LocoMonAction =          Open LocoNet Monitor
 jmri.jmrix.loconet.slotmon.SlotMonAction =          Open LocoNet Slot Monitor
 jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
+jmri.jmrix.grapevine.serialmon.SerialMonAction =    Open Grapevine Monitor
+jmri.jmrix.grapevine.packetgen.SerialPacketGenAction = Open Grapevine Send Packet
 
 # RPS items
 jmri.jmrix.rps.rpsmon.RpsMonAction      =           Open RPS Monitor
