--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.10 $
+# Revision $Revision: 1.11 $
 #
 # Default properties for the apps package of jmri.
 
@@ -52,4 +52,6 @@ PacketScriptVersionCredit = PacketScript {0}, part of the JMRI project
 
 ConnectionCredit  = Connected via {0} on {1}
 JavaVersionCredit = Java version {0} ({1})
+
+ConnectionFailed = ERROR {0} using {1} 
 
