--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.19 $ -->
+<!-- Revision $Revision: 1.20 $ -->
 
 <!-- This file is part of JMRI.                                             -->
 <!--                                                                        -->
@@ -98,6 +98,9 @@
            destdir="${target}"
            source="${source_version}" 
            target="${jre_version}" 
+           fork="true"
+           memoryinitialsize="256m"
+           memorymaximumsize="256m"
            deprecation="${deprecation}"
            debug="no" >
        <classpath refid="project.class.path"    />
@@ -110,6 +113,9 @@
            destdir="${target}" 
            source="${source_version}" 
            target="${jre_version}" 
+           fork="true"
+           memoryinitialsize="256m"
+           memorymaximumsize="256m"
            deprecation="${deprecation}"
            debug="yes" >
        <classpath refid="project.class.path"    />
@@ -131,6 +137,9 @@
            destdir="${target}"
            source="${source_version}" 
            target="${jre_version}" 
+           fork="true"
+           memoryinitialsize="256m"
+           memorymaximumsize="256m"
            deprecation="${deprecation}"
            debug="yes" >
        <classpath refid="project.class.path"    />
