Add actions to logix to reset or cancel delayed set sensor and delayed set turnout actions

--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.11 $
+# Revision $Revision: 1.12 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -140,7 +140,11 @@ ActionSetSignalLit = Set Signal Lit
 ActionTriggerRoute = Trigger Route
 ActionSetSensor = Set Sensor
 ActionDelayedSensor = Delayed Set Sensor 
+ActionResetDelayedSensor = Reset Delayed Set Sensor
+ActionCancelSensorTimers = Cancel Timers for Sensor
 ActionDelayedTurnout = Delayed Set Turnout
+ActionResetDelayedTurnout = Reset Delayed Set Turnout
+ActionCancelTurnoutTimers = Cancel Timers for Turnout
 ActionSetLight = Set Light
 ActionSetMemory = Set Memory 
 ActionEnableLogix = Enable Logix
@@ -188,6 +192,8 @@ Error22 = The name "{0}" does not match an existing logix.\nPlease correct or cr
 Error23 = Invalid entry for number of seconds to wait for Delayed Set Sensor action - {0}\nPlease enter number of seconds (digits only), and try again.
 Error25 = Unreasonable or missing entry of time to wait for Delayed Set Sensor action - {0}\nPlease enter number of seconds (digits only), and try again.
 Error26 = Invalid time entry "{0}"\nTime must be entered in hh:mm format (e.g. 01:30, 16:00)\nfor a 24-hour clock. Please reenter in correct format, and try again. 
+Error27 = Invalid entry for number of seconds to wait for Reset Delayed Set Sensor action - {0}\nPlease enter number of seconds (digits only), and try again.
+Error28 = Unreasonable or missing entry of time to wait for Reset Delayed Set Sensor action - {0}\nPlease enter number of seconds (digits only), and try again.
 Error30 = Duplicate user name error. Entered user name is already in use by Conditional "{0}".\nPlease enter a different user name from others in this table.
 Error32 = Cannot edit two Logixs at the same time. Please complete edit of Logix "{0}" and try again.
 Error34 = Cannot edit two Conditionals at the same time. Please complete edit of Conditional "{0}" and try again.
@@ -196,6 +202,8 @@ Error36 = Sorry, cannot add more Conditionals to this Logix;\n it has the maximu
 Error37 = Sorry, cannot add more state variables to this conditional;\n it has the maximum allowed.
 Error38 = Unreasonable or missing entry of time to wait for Delayed Set Turnout action - {0}\nPlease enter number of seconds (digits only), and try again.
 Error39 = Invalid entry for number of seconds to wait for Delayed Set Turnout action - {0}\nPlease enter number of seconds (digits only), and try again.
+Error40 = Unreasonable or missing entry of time to wait for Reset Delayed Set Turnout action - {0}\nPlease enter number of seconds (digits only), and try again.
+Error41 = Invalid entry for number of seconds to wait for Reset Delayed Set Turnout action - {0}\nPlease enter number of seconds (digits only), and try again.
 
 WarnTitle = Warning
 ButtonDisabled = Continue Disabled
