Disabled the clock sync features here in favor of the integrated version with the simple clock. A few other minor bugs, but left all the monitoring and clock setting ablities in tact.

--- a/jmri/jmrix/nce/clockmon/ClockMonBundle.properties
+++ b/jmri/jmrix/nce/clockmon/ClockMonBundle.properties
@@ -1,6 +1,6 @@
 # ClockMonBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the Nce Clock Monitor Pane
 #
@@ -28,6 +28,7 @@ LabelTimeSep = :
 LabelRatio = Ratio:
 LabelToOne = :1
 InterfaceSyncSelectBorderText = Sync Mode Select
+InterfaceCommandBorderText = Control and Commands
 
 TagAm = AM
 TagPm = PM
