Took the simple way and added extra connections. So now there are 3 additional lines. Didn't get fancy with buttons or anything. I figure this should hold until a whole revamp with multiple systems etc...

--- a/apps/AppsConfigBundle.properties
+++ b/apps/AppsConfigBundle.properties
@@ -1,6 +1,6 @@
 # AppsConfigBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Default properties for configuration in the apps package of JMRI, including
 # the AppConfigPanel and PerformActionPanel classes
@@ -8,7 +8,9 @@
 BorderLayoutConnection      = Layout connection:
 BorderLayoutGUI             = GUI style:
 BorderLayoutProgrammer      = Programmer defaults:
-BorderLayoutAuxConnection   = Aux layout connection:
+BorderLayoutAuxConnection2  = Aux layout connection 2:
+BorderLayoutAuxConnection3  = Aux layout connection 3:
+BorderLayoutAuxConnection4  = Aux layout connection 4:
 BorderLayoutLocale          = Locale:
 BorderLayoutCreateButton    = Create buttons:
 BorderLayoutStartupActions  = Do action at startup:
