--- a/jmri/jmrix/lenz/stackmon/StackMonBundle.properties
+++ b/jmri/jmrix/lenz/stackmon/StackMonBundle.properties
@@ -1,6 +1,6 @@
 # StackMonBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.lenz.stackmon stackbase tool
 
@@ -10,6 +10,7 @@ StackMonitorTitle = Command Station Stack Monitor
 NextButtonLabel = Next Entry
 PreviousButtonLabel = Previous Entry
 DeleteButtonLabel = Delete Entry
+RefreshButtonLabel = Refresh 
 
 #Status Messages
 SearchFail = No Address found
