add powerline, grapevine

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.12 $
+# Revision $Revision: 1.13 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -49,13 +49,15 @@ jmri.jmrit.jython.InputWindowAction =               Open Script Entry Window
 # selected items from systems menus
 jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Open C/MRI Monitor
 jmri.jmrix.easydcc.easydccmon.EasyDccMonAction =    Open EasyDCC Monitor
+jmri.jmrix.grapevine.serialmon.SerialMonAction =    Open Grapevine Monitor
+jmri.jmrix.grapevine.packetgen.SerialPacketGenAction = Open Grapevine Send Packet
 jmri.jmrix.lenz.mon.XNetMonAction =                 Open XPressNet Monitor
 jmri.jmrix.loconet.locomon.LocoMonAction =          Open LocoNet Monitor
 jmri.jmrix.loconet.slotmon.SlotMonAction =          Open LocoNet Slot Monitor
 jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
+jmri.jmrix.powerline.serialmon.SerialMonAction =    Open Powerline Monitor
+jmri.jmrix.powerline.packetgen.SerialPacketGenAction = Open Powerline Send Packet
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
-jmri.jmrix.grapevine.serialmon.SerialMonAction =    Open Grapevine Monitor
-jmri.jmrix.grapevine.packetgen.SerialPacketGenAction = Open Grapevine Send Packet
 
 # RPS items
 jmri.jmrix.rps.rpsmon.RpsMonAction      =           Open RPS Monitor
