main window help

--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.11 $
+# Revision $Revision: 1.12 $
 #
 # Default properties for the apps package of jmri.
 
@@ -19,7 +19,8 @@ MenuTools    = Tools
 MenuRoster   = Roster
 
 MenuHelp            = Help
-MenuItemHelp        = Help
+MenuItemWindowHelp  = Window Help ...
+MenuItemHelp        = General Help ...
 MenuItemLicense     = License ...
 MenuItemLocations   = Locations ...
 MenuItemContext     = Context ...
