add Block Table

--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.18 $
+# Revision $Revision: 1.19 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
@@ -20,6 +20,7 @@ MenuItemMemoryTable = Memory Variables
 MenuItemSimpleSignal = Simple Signal Logic
 MenuItemRouteTable = Routes
 MenuItemLogixTable = Logix
+MenuItemBlockTable = Blocks
 MenuItemSensorGroup = Sensor Groups...
 
 MenuThrottles = Throttles
