--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.24 $
+# Revision $Revision: 1.25 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -16,6 +16,7 @@
 # FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
 # for more details.
 
+TitleBlockTable  = Block Table
 TitleSensorTable  = Sensor Table
 TitleTurnoutTable = Turnout Table
 TitleSignalTable  = Signal Table
@@ -41,6 +42,7 @@ TitleAddTurnout = Add New Turnout
 TitleAddReporter = Add New Reporter
 TitleAddMemory  = Add New Memory
 TitleAddLight   = Add/Edit Light
+TitleAddBlock   = Add/Edit Block
 
 ColumnHeadEnabled = Enabled
 
