Test changes for powerline devices. If created as a light, on means brighten by one unit, and off means dim by one unit. Only intended for more testing while we figure out what class changes  for a dimable item. Also added a light control so I could send multiple on or off commands as turnout control only toggled. Same issue with the tables. I took a stab at the help but I don't think I did it right.

--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.19 $
+# Revision $Revision: 1.20 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
@@ -11,6 +11,7 @@ MenuItemDecoderProServiceProgrammer = Service-Mode Programmer
 MenuItemDecoderProOpsModeProgrammer = Ops-Mode Programmer
 
 MenuItemTurnoutControl = Turnout Control ...
+MenuItemLightControl = Light Control ...
 MenuItemTurnoutTable = Turnouts
 MenuItemSensorTable = Sensors
 MenuItemLightTable = Lights
