--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,19 +1,19 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.25 $
+# Revision $Revision: 1.26 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
 # This file is part of JMRI.
 #
-# JMRI is free software; you can redistribute it and/or modify it under 
-# the terms of version 2 of the GNU General Public License as published 
+# JMRI is free software; you can redistribute it and/or modify it under
+# the terms of version 2 of the GNU General Public License as published
 # by the Free Software Foundation. See the "COPYING" file for a copy
 # of this license.
-# 
-# JMRI is distributed in the hope that it will be useful, but WITHOUT 
-# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
-# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
+#
+# JMRI is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
 # for more details.
 
 TitleBlockTable  = Block Table
@@ -52,6 +52,7 @@ StringVirtual = Virtual
 StringSE8c4aspect  = SE8c 4 Aspect
 StringLsDec = LDT LS-DEC
 StringGrapevine = Grapevine
+StringDccSigDec = DCC Signal Decoder
 
 LabelSystemName = System Name:
 LabelUserName   = User Name:
@@ -63,6 +64,7 @@ LabelFlashGreenTurnoutNumber  = Flash Green turnout number:
 LabelFlashYellowTurnoutNumber = Flash Yellow turnout number:
 LabelFlashRedTurnoutNumber    = Flash Red turnout number:
 LabelDarkTurnoutNumber    = Dark turnout number:
+LabelSignalTurnoutNumber = Signal Turnout Number
 
 LightSystemName = Light System Name
 LightSystemNameHint = Enter system name for new Light, e.g. CL1B13
@@ -117,12 +119,12 @@ LightError11 = exists and is the same address.
 LightError12 = Format error in time entry, please reenter as hh:mm.
 LightError13 = Number out of range in time entry, please reenter as hh:mm.
 LightError14 = Bad character in time field, please reenter as hh:mm.
-LightError15 = Warning: System Name refers to an address already used by 
+LightError15 = Warning: System Name refers to an address already used by
 LightWarn1 = Warning: Light created, but Sensor could not be provided.
 LightWarn2 = Warning: Light created, but Turnout could not be provided.
 LightWarn3 = Requested Turnout uses the same address as Light:
 LightWarn4 = Warning: New Light refers to address already used by
-LightWarn5 = Warning - Requested Light 
+LightWarn5 = Warning - Requested Light
 LightWarn6 = uses same address as Turnout
 LightWarn7 = Do you still want to add this Light?
 LightWarn8 = Warning: Light created, but Trigger Sensor has invalid name.
@@ -138,6 +140,6 @@ WarningUserName = User Name " {0} " has already been used.
 
 WarningTitle = Warning
 
-TurnoutWarn1 = Warning - Requested Turnout 
+TurnoutWarn1 = Warning - Requested Turnout
 TurnoutWarn2 = uses same address as Light
 TurnoutWarn3 = Do you still want to add this Turnout?
