--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.26 $
+# Revision $Revision: 1.27 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -45,6 +45,7 @@ TitleAddLight   = Add/Edit Light
 TitleAddBlock   = Add/Edit Block
 
 ColumnHeadEnabled = Enabled
+ColumnHeadDimmable = Use Dim
 
 StringTripleTurnout = Triple Turnout
 StringDoubleTurnout = Double Turnout
@@ -143,3 +144,15 @@ WarningTitle = Warning
 TurnoutWarn1 = Warning - Requested Turnout
 TurnoutWarn2 = uses same address as Light
 TurnoutWarn3 = Do you still want to add this Turnout?
+
+// light features for dimmable lights
+LightDimBorder =  Dimmable Light Options 
+LightDimSettingBorder =  Dimmable Light Settings 
+LightCanDim = Enable Dimming 
+LightCanDimHint = Enables Dimming, send only dim commands to light
+LightMinDim =  Minimum Dim 
+LightMinDimHint = 0 to 100%, must be equal or less than max
+LightMaxDim =  Maximum Dim 
+LightMaxDimHint = 0 to 100%, must be equal or greater than min
+LightRateDim = Min to Max Duration
+LightRateDimHint = time in FastSeconds to go from 0% to 100%
