add light control

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.13 $
+# Revision $Revision: 1.14 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -19,6 +19,7 @@ jmri.jmrit.symbolicprog.tabbedframe.PaneOpsProgAction= Open DecoderPro Operation
 
 jmri.jmrit.powerpanel.PowerPanelAction =            Open Power Control
 jmri.jmrit.speedometer.SpeedometerAction =          Open Speedometer
+jmri.jmrit.simplelightctrl.SimpleLightCtrlAction = Open Light Control
 jmri.jmrit.simpleturnoutctrl.SimpleTurnoutCtrlAction = Open Turnout Control
 
 jmri.jmrit.beantable.TurnoutTableAction =           Open Turnout Table
